--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE  html>
+<html>
 <head>
-  <title>Test Chrome</title>
-  <body=background = red>
+<title> Test Chrome</title>
+<body bgcolor="grey"
+<p> Test text </p>
 </body>
 </html>
