--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE  html>
 <html>
 <head>
-<title> Test Chrome</title>
+<center><b><title> Test Chrome</b></title>
 <body bgcolor="grey"
 <p> Test text </p>
 </body>
