--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <head>
 <center><b><title> Test Chrome</b></title>
 <body bgcolor="grey"
-<p> Test text </p>
+<center><b><p> Test text </b></p>
 </body>
 </html>
